--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -1,18 +1,41 @@
 <h2>My Heroes</h2>
+<div>
+  <label for="new-hero">Hero name: </label>
+  <input id="new-hero" #heroName/>
+
+  <!-- (click) passes input value to add() and then clears the input -->
+  <button type="button" class="add-button" (click)="add(heroName.value); heroName.value=''">
+    Add hero
+  </button>
+</div>
 <ul class="heroes">
-  <li *ngFor="let hero of heroes | async">
-    <button type="button" [class.selected]="hero === selectedHero" type="button" (click)="onSelect(hero)">
-      MEINJENSONBUTTON
-      <span class="badge">{{hero.id}}</span>
-      <span class="name">{{hero.name}}</span>
-    </button>
+  <li *ngFor="let hero of heroes">
     <a routerLink="/detail/{{hero.id}}">
       <span class="badge">{{hero.id}}</span>
       <span class="name">{{hero.name}}</span>
+      <button type="button" class="delete" title="delete hero"
+              (click)="delete(hero)">x
+      </button>
     </a>
   </li>
 </ul>
-<app-hero-detail [hero]="selectedHero"></app-hero-detail>
+
+<!--button version-->
+<!--<h2>My Heroes</h2>-->
+<!--<ul class="heroes">-->
+<!--  <li *ngFor="let hero of heroes | async">-->
+<!--    <button type="button" [class.selected]="hero === selectedHero" type="button" (click)="onSelect(hero)">-->
+<!--      MEINJENSONBUTTON-->
+<!--      <span class="badge">{{hero.id}}</span>-->
+<!--      <span class="name">{{hero.name}}</span>-->
+<!--    </button>-->
+<!--    &lt;!&ndash;    <a routerLink="/detail/{{hero.id}}">&ndash;&gt;-->
+<!--    &lt;!&ndash;      <span class="badge">{{hero.id}}</span>&ndash;&gt;-->
+<!--    &lt;!&ndash;      <span class="name">{{hero.name}}</span>&ndash;&gt;-->
+<!--    &lt;!&ndash;    </a>&ndash;&gt;-->
+<!--  </li>-->
+<!--</ul>-->
+<!--<app-hero-detail [hero]="selectedHero"></app-hero-detail>-->
 
 
 
